fixed wiggle on mobile screen

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,3 +1,8 @@
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 /* Custom container applied to all bold elements except for navbar */
 .container {
   width: 95%;
